      debian/pydist-override file to override)
    - TODO: disable PyDist feature if dh_pydeb is in debian/rules
  * Use versioned interpreter name rather than "python" only in
    python-minimal.postinst (closes: 595826)

  [ Matthias Klose ]
  * python.mk (py_libdir): Return /usr/lib/python3/dist-packages for 3.x
    versions.

 -- Piotr Ożarowski <piotr@debian.org>  Thu, 02 Sep 2010 19:18:26 +0200

python-defaults (2.6.6-1) unstable; urgency=low

  [ Piotr Ożarowski ]
  * dh_python2: typo in --help output fixed (thanks to Adam D. Barratt)
  * Bump python-minimal's Breaks of python2.5-minimal to << 2.5.5-7 (due to
    missing runpy module)
  * Set the right minimum required python package version in packages with
    private modules

  [ Scott Kitterman ]
  * debian/python-policy.sgml and debian/pyversions.py fix typos (thanks to
    Adam D. Barratt)

  [ Matthias Klose ]
  * Bump version to 2.6.6.

 -- Piotr Ożarowski <piotr@debian.org>  Tue, 31 Aug 2010 19:09:30 +0200

python-defaults (2.6.5-13) unstable; urgency=low

  [ Scott Kitterman ]
  * Python policy changes for X-Python-Version and X-Python3-Version
    - Minimum changes for Squeeze
  * In pyversions, do not silently ignore Python 3 versions
  * Add support for X-Python-Version to match X-Python3-Version

  [ Piotr Ożarowski ]
  * Fix documentation typo in pycompile/pycompile.1
  * dh_python2:
    - pass shallow=False to cmpfiles to make sure only exactly the same files
      are moved to pyshared
    - add support for X-Python-Version

 -- Piotr Ożarowski <piotr@debian.org>  Fri, 13 Aug 2010 22:39:37 +0200

python-defaults (2.6.5-12) unstable; urgency=low

  * pycompile: do not hang if interpreters are not started in the same order
    as they're used (LP: #613675)
  * Add manpage for dh_python2, pycompile and pyclean
  * Standards-Version bumped to 3.9.1 (no other changes required)

 -- Piotr Ożarowski <piotr@debian.org>  Thu, 05 Aug 2010 19:15:52 -0400
