@@ -25,6 +25,11 @@ py_sitename = $(if $(filter $(subst python,,$(1)), 2.3 2.4 2.5),site,dist)-packa
 
 py_libdir = /usr/lib/python$(strip $(if $(findstring 3.,$(subst python,,$(1))),3,$(subst python,,$(1))))/$(py_sitename)
 
+# py_pkgname: package name corresponding to the python version.
+# Call as: $(call py_pkgname, <path>, <python version>).
+
+py_pkgname = $(if $(findstring 3.,$(2)),$(subst python-,python3-,$(1)),$(1))
+
 
 # The same macros for use inside loops in shell snippets
 
