@@ -16,6 +16,8 @@ python-defaults (2.6.6-2) UNRELEASED; urgency=low
   [ Matthias Klose ]
   * python.mk (py_libdir): Return /usr/lib/python3/dist-packages for 3.x
     versions.
+  * python.mk (py_pkgname): New macro to refer the package name depending
+    on the python version.
 
  -- Piotr Ożarowski <piotr@debian.org>  Thu, 02 Sep 2010 19:18:26 +0200
 
